// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableEmpty Component should have fallback checks for certain props: fallback display 1`] = `
<EmptyTable>
  <table
    aria-label={null}
  />
  <EmptyState
    variant="sm"
  >
    <EmptyStateIcon
      icon={[Function]}
    />
    <EmptyStateHeader
      headingLevel="h1"
      titleText="Lorem ipsum title"
    />
    <EmptyStateBody>
      Lorem ipsum message.
    </EmptyStateBody>
  </EmptyState>
</EmptyTable>
`;

exports[`TableEmpty Component should render a basic component: basic 1`] = `
<EmptyTable>
  <table
    aria-label={null}
  />
  <EmptyState
    variant="sm"
  >
    <EmptyStateIcon
      icon={[Function]}
    />
    <EmptyStateHeader
      headingLevel="h2"
      titleText="Lorem ipsum title"
    />
    <EmptyStateBody>
      Lorem ipsum message.
    </EmptyStateBody>
  </EmptyState>
</EmptyTable>
`;
